# personal-todo-manager-codex

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.claude/: settings.local.json.example
.claude/agents/: check-migration.md
.claude/commands/: check-all.md
.run/: Run backend.run.xml  Run forntend.run.xml
.specify/: feature.json  init-options.json  integration.json
backend/: .claudeignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_case_insensitive_list_names.py  0003_convert_ids_to_uuid.py  0004_add_task_history.py
backend/app/: __init__.py  main.py
backend/app/api/: auth.py  deps.py  errors.py  lists.py  tasks.py
backend/app/auth/: oauth.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  base.py  notification_ack.py  oauth_identity.py  project_list.py  task.py  task_history.py  user.py
backend/app/repositories/: auth.py
backend/app/schemas/: auth.py  history.py  lists.py  tasks.py  ws.py
backend/app/services/: history.py  lists.py  notifications.py  tasks.py
backend/app/websocket/: __init__.py  notifications.py
backend/scripts/: new_migration.py  seed.py
backend/tests/: conftest.py  test_auth_and_tasks.py  test_notifications.py  test_postgres_integration.py  test_task_history.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.tsx
specs/: Personal To-Do Manager.docx  Personal To-Do Manager.md
(+44 files in other folders)
